--- a/public/index.html
+++ b/public/index.html
@@ -27,19 +27,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
     <title>React App</title>
+    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="30ee9c14-eff9-45be-9007-a78faa459041" data-blockingmode="auto" type="text/javascript"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script id="CookieDeclaration" src="https://consent.cookiebot.com/30ee9c14-eff9-45be-9007-a78faa459041/cd.js" type="text/javascript" async></script>
   </body>
 </html>
