--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="30ee9c14-eff9-45be-9007-a78faa459041" data-blockingmode="auto" type="text/javascript"></script>
+    <script
+      id="Cookiebot"
+      src="https://consent.cookiebot.com/uc.js"
+      data-cbid="30ee9c14-eff9-45be-9007-a78faa459041"
+      data-blockingmode="auto"
+      type="text/javascript"
+    ></script>
 
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -26,13 +32,21 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap"
+      rel="stylesheet"
+    />
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script id="CookieDeclaration" src="https://consent.cookiebot.com/30ee9c14-eff9-45be-9007-a78faa459041/cd.js" type="text/javascript" async></script>
+    <script
+      id="CookieDeclaration"
+      src="https://consent.cookiebot.com/30ee9c14-eff9-45be-9007-a78faa459041/cd.js"
+      type="text/javascript"
+      async
+    ></script>
   </body>
 </html>
