--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script
+    <!-- <script
       id="Cookiebot"
       src="https://consent.cookiebot.com/uc.js"
       data-cbid="30ee9c14-eff9-45be-9007-a78faa459041"
       data-blockingmode="auto"
       type="text/javascript"
-    ></script>
+    ></script> -->
 
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -42,11 +42,11 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script
+    <!-- <script
       id="CookieDeclaration"
       src="https://consent.cookiebot.com/30ee9c14-eff9-45be-9007-a78faa459041/cd.js"
       type="text/javascript"
       async
-    ></script>
+    ></script> -->
   </body>
 </html>
